// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs


Table Image {
  id uuid [primary key]
  file_name varchar [not null]
  image_url url [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  caption varchar
  created_by uuid [ref: > U.id, not null] 
}

Table LabelDetect {
  id int [primary key]
  image_id uuid [ref: > U.id, primary key]
  dataset_id uuid [primary key]
  category_id int
  bbox array
  created_by uuid [ref: > U.id]
  updated_by uuid [ref: > U.id]
}

Table LabelSegment {
  id int [primary key]
  image_id uuid [ref: > U.id, primary key]
  dataset_id uuid [primary key]
  category_id int
  segments array
  created_by uuid [ref: > U.id]
  updated_by uuid [ref: > U.id]
}


Table Dataset {
  id uuid [primary key]
  name string
  created_by uuid [ref: > U.id]
  created_at timestamp
  updated_at timestamp
}

// Embbed in Dataset
Table Class {
  id int [primary key]
  // dataset_id uuid [primary key]
  name string
  created_at timestamp
  updated_at timestamp
}


Table Users as U {
  id uuid [primary key]
  clerk_user_id varchar [not null]
}
